--- a/src/stories/styles/fonts.css
+++ b/src/stories/styles/fonts.css
@@ -2,5 +2,7 @@
   font-family: Roboto, sans-serif;
 }
 :root {
+  --font-size-smaller: 10px;
   --font-size-small: 13px;
+  --font-size-medium: 14px;
 }
