--- a/src/stories/styles/colors.css
+++ b/src/stories/styles/colors.css
@@ -22,4 +22,9 @@
   --color-shadow-gray: rgba(165, 165, 165, 0.65);
 
   --color-yellow: #f8e71c;
+
+  --color-brown-dark: rgba(0, 0, 0, 0.87);
+  --color-brown-light: #74787b;
+
+  --color-orange: #ff5300;
 }
