--- a/src/stories/styles/main.css
+++ b/src/stories/styles/main.css
@@ -6,6 +6,11 @@
   --padding-left: 10px;
   --padding-top: 10px;
   --padding: 10px;
+
+  --default-margin: 0 20px 20px 0;
+  --default-padding: 0 0 0 10px;
+
+  --border-radius: 3px;
 }
 
 .same-row {
